src/objects/ACCL__Product_Condition__c.object
<CustomObject>
    <description>Product specific conditons will be used for e.g. specifying product prices relevant for simple order value calculation</description>
    <fields>
        <fullName>ACCL__Condition_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to condition template.</description>
        <label>Condition Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Product_Reference__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Customer_Reference__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active and product relevant condition templates can be shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Condition_Template__c</referenceTo>
        <relationshipLabel>Product Conditions</relationshipLabel>
        <relationshipName>Product_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_List_Type__c</fullName>
        <description>Price list type for wholesaler or direct customer.</description>
        <inlineHelpText>For the Wholesaler choose WS1999, for the Direct Customer choose WS2000.</inlineHelpText>
        <label>Price List Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WS1999</fullName>
                    <default>true</default>
                    <label>WS1999</label>
                </value>
                <value>
                    <fullName>WS2000</fullName>
                </value>
                <value>
                    <fullName>NotRelevant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Price_Type__c</fullName>
        <description>Price type for factory or consumer.</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotRelevant</fullName>
                </value>
                <value>
                    <fullName>US01_Continental</fullName>
                </value>
                <value>
                    <fullName>US01_Hawaii</fullName>
                </value>
                <value>
                    <fullName>US01_Alaska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <description>Reference to the Product for which the product condition is defined.</description>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Product Condition related list record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Template_Description__c</fullName>
        <description>Description of the condition template.</description>
        <formula>ACCL__Condition_Template__r.ACCL__Description__c</formula>
        <label>Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The day when the Condition will become valid for the Product.</description>
        <inlineHelpText>The day when the Condition will become valid for the Product.</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>The last day when the Condition will be valid for the Product.</description>
        <inlineHelpText>The last day when the Condition will be valid for the Product.</inlineHelpText>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Value__c</fullName>
        <description>Value for the product condition.</description>
        <label>Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Condition</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(ACCL__Condition_Template__r.ACCL__Sales_Org__c) &lt;&gt; ACCL__Product__r.ACCL__Sales_Org__c</errorConditionFormula>
        <errorMessage>The Product and the Condition Template must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Template_changes_are_not_allowed</fullName>
        <active>true</active>
        <description>The Condition Template can&apos;t be edited after Product Condition creation.</description>
        <errorConditionFormula>NOT( ISBLANK( ACCL__Condition_Template__c ))&amp;&amp; ISCHANGED(ACCL__Condition_Template__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Template__c</errorDisplayField>
        <errorMessage>The Condition Template can&apos;t be edited after Product Condition creation.</errorMessage>
    </validationRules>
</CustomObject>